k8s/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: user-service
  labels:
    name: user-service
    linkerd.io/inject: enabled
